--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -2,6 +2,7 @@
    
 $S:     480px;
 $SM:   640px;
+$MS:    721px;
 $M:     768px;     
 $L:     1170px; 
 $LL:    1280px;
@@ -15,10 +16,16 @@ $LL:    1280px;
   @else if $canvas == SM {
    @media only screen and (min-width: $SM) { @content; } 
   }    
+  @else if $canvas == MS {
+   @media only screen and (min-width: $MS) { @content; } 
+  }    
   @else if $canvas == M {
    @media only screen and (min-width: $M) { @content; } 
   }
   @else if $canvas == L {
    @media only screen and (min-width: $L) { @content; } 
+  }
+  @else if $canvas == LL {
+   @media only screen and (min-width: $LL) { @content; } 
   }
 }
