--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1383,10 +1383,10 @@ main > p > a {
         float: right;
     }
     
-    @include MQ(M) {
-        width: 50%;
-        float: right;
-    }
+//    @include MQ(M) {
+//        width: 50%;
+//        float: right;
+//    }
 
     .textWrap {
         text-align: center;
@@ -1456,6 +1456,38 @@ main > p > a {
             -webkit-box-shadow: inset 0px 0px 0px 10px $color-green;
             box-shadow:         inset 0px 0px 0px 10px $color-green;
         }
+    }
+    .frame.caricatura {
+        
+        -moz-box-shadow:    inset 0px 0px 0px 6px $color-blue;
+        -webkit-box-shadow: inset 0px 0px 0px 6px $color-blue;
+        box-shadow:         inset 0px 0px 0px 6px $color-blue;
+        
+        
+        @include MQ(M) {
+            width: 300px;
+            height: 300px;
+            margin: .5em auto;
+        }
+        
+        @include MQ(L) {
+            width: 300px;
+            height: 300px;
+        }
+    }
+}
+
+p.home-single-p {
+    @include MQ(SM) {
+        width: 45%;
+        float: left;
+        top: 300px;
+    }
+    @include MQ(M) {
+        margin-left: 30px;
+        margin-top: 100px;
+        padding-left: 30px;
+        margin: .5em auto 3em auto;
     }
 }
 
