--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,11 @@
 - Slider Navigation         (1146)
 - Main Content              (1238)
 - Skill Bars                (1462)
-- Light Box                 (1721)
-- Forms                     (1905)
-- Footer                    (2336)
-- Javascript disabled       (2426)
+- Gallery                   (1567)
+- Light Box                 (1722)
+- Forms                     (1906)
+- Footer                    (2337)
+- Javascript disabled       (2427)
 */
 @import url("https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i|Maven+Pro:400,500,700,900|Oswald:400|Lato:400");
 /* -------------------------------- 
