--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,10 +23,11 @@
 - Slider Navigation         (1146)
 - Main Content              (1238)
 - Skill Bars                (1462)
-- Light Box                 (1721)
-- Forms                     (1905)
-- Footer                    (2336)
-- Javascript disabled       (2426)
+- Gallery                   (1567)
+- Light Box                 (1722)
+- Forms                     (1906)
+- Footer                    (2337)
+- Javascript disabled       (2427)
 */
 
 
